# SCRA-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  verify_ingestion.py
.github/workflows/: ci.yml
docs/: compliance_matrix.md  implementation_details.md
evals/: annotate_sources.py  benchmark_chunking.py  compare_runs.py  eval_retrieval.py  golden_dataset.json  merge_sources.py  run_eval.py
evals/results/: .gitignore  benchmark_summary.json  retrieval_baseline.json  retrieval_fixed_1200.json  retrieval_fixed_1200_meta.json  retrieval_fixed_2000.json  retrieval_fixed_800.json  retrieval_para_1200.json  retrieval_para_1200_meta.json  retrieval_para_2000.json  retrieval_para_800_meta.json  run_2026-02-11.json  run_2026-02-11_maverick.json  run_2026-02-11_openai.json  run_2026-02-11_postfix.json
src/: container.py  main.py
src/application/: __init__.py  cache.py  prompts.py  workflow.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  exceptions.py  models.py  protocols.py
src/infrastructure/: __init__.py  base_llm_adapter.py  chroma_adapter.py  cohere_adapter.py  groq_adapter.py  ingestion.py  openai_adapter.py  (+2 more)
tests/: conftest.py  test_api.py  test_cache.py  test_chunking.py  test_citation_service.py  test_domain_models.py  test_eval_scoring.py  test_generation_service.py  test_grading_service.py  test_infrastructure.py  test_integration.py  test_middleware.py  test_rate_limit.py  test_retriever_service.py  test_workflow.py
(+10 files in other folders)
